crates/ui/tests/it/snapshots/it__options__the_layout_switches_from_options_both_ways_and_persists.snap
---
source: crates/ui/tests/it/options.rs
expression: h.snapshot()
---
                                                                                                    
                                          Pick your layout                                          
                                                                                                    
            ╔═ ► Right-handed ═════════════════════════════════════════════════════════╗            
            ║                                                                          ║            
            ║                                                 arrows      move         ║            
            ║                                                 f           select       ║            
            ║  [q][w][e][r][t][y][u][i][o][p]       [↑]       d/Escape    back         ║            
            ║   [a][s][d][f][g][h][j][k][l][;]   [←][↓][→]    a           prev unit    ║            
            ║                                                 s           next unit    ║            
            ║         [      Space      ]                     e           unit info    ║            
            ║                                                 w           danger zone  ║            
            ║                                                 Space       end turn     ║            
            ║                                                 Shift+Space auto-end     ║            
            ║                                                 r           rewind       ║            
            ╚══════════════════════════════════════════════════════════════════════════╝            
                                                                                                    
            ┌─ Left-handed ────────────────────────────────────────────────────────────┐            
            │                                                                          │            
            │                                                 wasd        move         │            
            │                                                 j           select       │            
            │  [q][w][e][r][t][y][u][i][o][p]       [↑]       k/Escape    back         │            
            │   [a][s][d][f][g][h][j][k][l][;]   [←][↓][→]    ;           prev unit    │            
            │                                                 l           next unit    │            
            │         [      Space      ]                     i           unit info    │            
            │                                                 o           danger zone  │            
            │                                                 Space       end turn     │            
            │                                                 Shift+Space auto-end     │            
            │                                                 u           rewind       │            
            └──────────────────────────────────────────────────────────────────────────┘            
                                                                                                    
                                  Up Down choose · f pick · d back                                  
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaccddddddddddddddddccccccccccccccccccccccccccccccccccccccccccccccccccccccccccaaaaaaaaaaaa
aaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeecaaaaaaaaaaaa
aaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeffffffeeeeeeeeeeeeeeeeeeecaaaaaaaaaaaa
aaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedeeeeeeeeeeeeeeeeeeeeeeeecaaaaaaaaaaaa
aaaaaaaaaaaaceeggggdggdggdgggggggggggggggggggeeeeeeegfgeeeeeeeddddddddeeeeeeeeeeeeeeeeecaaaaaaaaaaaa
aaaaaaaaaaaaceeegdggdggdggdgggggggggggggggggggeeegfggfggfgeeeedeeeeeeeeeeeeeeeeeeeeeeeecaaaaaaaaaaaa
aaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedeeeeeeeeeeeeeeeeeeeeeeeecaaaaaaaaaaaa
aaaaaaaaaaaaceeeeeeeeegggggggdddddgggggggeeeeeeeeeeeeeeeeeeeeedeeeeeeeeeeeeeeeeeeeeeeeecaaaaaaaaaaaa
aaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedeeeeeeeeeeeeeeeeeeeeeeeecaaaaaaaaaaaa
aaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedddddeeeeeeeeeeeeeeeeeeeecaaaaaaaaaaaa
aaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedddddddddddeeeeeeeeeeeeeecaaaaaaaaaaaa
aaaaaaaaaaaaceeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedeeeeeeeeeeeeeeeeeeeeeeeecaaaaaaaaaaaa
aaaaaaaaaaaaccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaahheeeeeeeeeeeeehhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhaaaaaaaaaaaa
aaaaaaaaaaaaheeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeehaaaaaaaaaaaa
aaaaaaaaaaaaheeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeffffeeeeeeeeeeeeeeeeeeeeehaaaaaaaaaaaa
aaaaaaaaaaaaheeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedeeeeeeeeeeeeeeeeeeeeeeeehaaaaaaaaaaaa
aaaaaaaaaaaaheeggggfggggggggggggggdggdggdggggeeeeeeegggeeeeeeeddddddddeeeeeeeeeeeeeeeeehaaaaaaaaaaaa
aaaaaaaaaaaaheeegfggfggfgggggggggggdggdggdggdgeeegggggggggeeeedeeeeeeeeeeeeeeeeeeeeeeeehaaaaaaaaaaaa
aaaaaaaaaaaaheeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedeeeeeeeeeeeeeeeeeeeeeeeehaaaaaaaaaaaa
aaaaaaaaaaaaheeeeeeeeegggggggdddddgggggggeeeeeeeeeeeeeeeeeeeeedeeeeeeeeeeeeeeeeeeeeeeeehaaaaaaaaaaaa
aaaaaaaaaaaaheeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedeeeeeeeeeeeeeeeeeeeeeeeehaaaaaaaaaaaa
aaaaaaaaaaaaheeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedddddeeeeeeeeeeeeeeeeeeeehaaaaaaaaaaaa
aaaaaaaaaaaaheeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedddddddddddeeeeeeeeeeeeeehaaaaaaaaaaaa
aaaaaaaaaaaaheeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeedeeeeeeeeeeeeeeeeeeeeeeeehaaaaaaaaaaaa
aaaaaaaaaaaahhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
--- legend ---
a = fg:text bg:black
b = fg:text_highlight bg:black
c = fg:panel_border_focus bg:panel_bg
d = fg:text_highlight bg:panel_bg
e = fg:text bg:panel_bg
f = fg:player bg:panel_bg
g = fg:text_dim bg:panel_bg
h = fg:panel_border bg:panel_bg
i = fg:text_dim bg:black
